--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  text-align: center;
+
 
   color-scheme: light dark;
   color: #264653;
@@ -18,10 +20,46 @@
 }
 
 a {
-  /* font-weight: 500; */
-  /* color: #646cff; */
   text-decoration: inherit;
 }
 a:hover {
   color: #2A9D8F;
 }
+
+.neumorphic-button {
+  /* display: inline-size;
+    aspect-ratio: 1/1; */
+    border: 0.5rem solid transparent;
+    border-radius: 1rem;
+    background: none;
+    min-width: 205px;
+    min-height: 88px;
+  
+    display: grid;
+    place-content: center;
+    gap: 1rem;
+  
+    --shadow:
+      -.5rem -.5rem 1rem hsl(0 0% 100% / .75),
+      .5rem .5rem 1rem hsl(0 0% 50% / .5);
+    box-shadow: var(--shadow);
+    outline: none;
+    transition: all 0.1s;
+  
+    &:hover, &:focus-visible {
+      color: #2A9D8F;
+      transform: scale(1.1);
+    }
+    &:active, &.active {
+      box-shadow:
+        var(--shadow),
+        inset .5rem .5rem 1rem hsl(0 0% 50% / .5),
+        inset -.5rem -.5rem 1rem hsl(0 0% 100% / .75);
+    }
+  }
+  
+  .neumorphic-button:active span {
+    font-size: 0.875rem;
+    transition: font-size 0.1s;
+  }
+  
